Fixed overlapping on IOS devices

--- a/css/site.css
+++ b/css/site.css
@@ -57,10 +57,13 @@ html {
 }
 
 header {
+    position: fixed;
+    z-index: 999;
     overflow: hidden;
     background-color: white;
     width: 100%;
-    position: fixed;
+    transform: translate3d(0, 0, 0);
+    background-clip: padding-box;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.6);
 }
 
@@ -74,6 +77,7 @@ header nav {
 }
 
 .text-load {
+    z-index: 1;
     color: rgba(0, 0, 0, 0);
     position: relative;
     animation: show 2s step-end forwards;
@@ -84,9 +88,9 @@ header nav {
     content: "";
     position: absolute;
     height: 100%;
+    background-color: black;
     animation: text-load 2s ease-in-out;
     -webkit-animation: text-load 2s ease-in-out;
-    background-color: black;
 }
 
 @keyframes show {
@@ -101,13 +105,16 @@ header nav {
 
 @keyframes text-load {
     0% {
+        margin-left: 0;
         width: 0%;
     }
     50% {
+        margin-left: 0;
         width: 100%;
     }
     100% {
-        width: 0%;
+        margin-left: 100%;
+        width: 0;
         background-color: none;
     }
 }
@@ -135,12 +142,12 @@ header nav {
 }
 
 .pre-loader {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  display: flex;
-  justify-content: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
 }
 
 .contact-list {
